--- a/Draw/Controller/Common/CommonMessageView.xib
+++ b/Draw/Controller/Common/CommonMessageView.xib
@@ -39,10 +39,10 @@
 					<object class="IBUIImageView" id="368008694">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">274</int>
-						<string key="NSFrameSize">{375, 171}</string>
+						<string key="NSFrameSize">{375, 191}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="838159615"/>
+						<reference key="NSNextKeyView" ref="952499716"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -51,13 +51,13 @@
 							<string key="NSResourceName">dialogue@2x.png</string>
 						</object>
 					</object>
-					<object class="IBUIImageView" id="838159615">
+					<object class="IBUIImageView" id="952499716">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{48, 65}, {61, 61}}</string>
+						<string key="NSFrame">{{48, 73}, {61, 61}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="16459004"/>
+						<reference key="NSNextKeyView" ref="952266705"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -66,19 +66,20 @@
 							<string key="NSResourceName">face_wry@2x.png</string>
 						</object>
 					</object>
-					<object class="IBUILabel" id="16459004">
+					<object class="IBUILabel" id="952266705">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{117, 65}, {238, 61}}</string>
+						<string key="NSFrame">{{117, 73}, {238, 61}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">7</int>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<string type="base64-UTF8" key="IBUIText">bWVzc2FnZSAKIGhlcmU</string>
+						<string type="base64-UTF8" key="IBUIText">5raI5oGv5bey57uP5oiQ5YqfCuWPkemAgee7mUplbm55A</string>
 						<object class="NSColor" key="IBUITextColor">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MCAwIDAAA</bytes>
@@ -96,11 +97,11 @@
 						<int key="IBUILineBreakMode">0</int>
 						<object class="IBUIFontDescription" key="IBUIFontDescription">
 							<int key="type">1</int>
-							<double key="pointSize">20</double>
+							<double key="pointSize">24</double>
 						</object>
 						<object class="NSFont" key="IBUIFont">
 							<string key="NSName">Helvetica</string>
-							<double key="NSSize">20</double>
+							<double key="NSSize">24</double>
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
@@ -122,7 +123,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">faceImageView</string>
 						<reference key="source" ref="191373211"/>
-						<reference key="destination" ref="838159615"/>
+						<reference key="destination" ref="952499716"/>
 					</object>
 					<int key="connectionID">6</int>
 				</object>
@@ -130,7 +131,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">messageLabel</string>
 						<reference key="source" ref="191373211"/>
-						<reference key="destination" ref="16459004"/>
+						<reference key="destination" ref="952266705"/>
 					</object>
 					<int key="connectionID">7</int>
 				</object>
@@ -148,8 +149,8 @@
 						<reference key="object" ref="191373211"/>
 						<array class="NSMutableArray" key="children">
 							<reference ref="368008694"/>
-							<reference ref="16459004"/>
-							<reference ref="838159615"/>
+							<reference ref="952499716"/>
+							<reference ref="952266705"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -171,12 +172,12 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">4</int>
-						<reference key="object" ref="838159615"/>
+						<reference key="object" ref="952499716"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">5</int>
-						<reference key="object" ref="16459004"/>
+						<reference key="object" ref="952266705"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 				</array>
